@@ -2,24 +2,23 @@ package com.backbase.stream.service;
 
 import static com.backbase.stream.legalentity.model.LegalEntityStatus.ENABLED;
 import static org.mockito.ArgumentMatchers.any;
-import static reactor.core.publisher.Mono.when;
 
-import com.backbase.dbs.accesscontrol.api.service.v3.DataGroupsApi;
-import com.backbase.dbs.accesscontrol.api.service.v3.FunctionGroupsApi;
-import com.backbase.dbs.accesscontrol.api.service.v3.ServiceAgreementsApi;
-import com.backbase.dbs.accesscontrol.api.service.v3.UsersApi;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.BatchResponseItemExtended;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.FunctionGroupItem;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.FunctionGroupUpdate;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.IdItem;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.Permission;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationAction;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationFunctionGroupPutRequestBody;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationIdentifier;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationIngestFunctionGroup;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationPermission;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.PresentationPermissionFunctionGroupUpdate;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.Privilege;
+import com.backbase.accesscontrol.assignpermissions.api.service.v1.AssignPermissionsApi;
+import com.backbase.accesscontrol.datagroup.api.service.v1.DataGroupApi;
+import com.backbase.accesscontrol.functiongroup.api.integration.v1.model.BatchResponseItemExtended;
+import com.backbase.accesscontrol.functiongroup.api.integration.v1.model.FunctionGroupBatchPutItem;
+import com.backbase.accesscontrol.functiongroup.api.integration.v1.model.FunctionGroupIngest;
+import com.backbase.accesscontrol.functiongroup.api.integration.v1.model.FunctionGroupNameIdentifier;
+import com.backbase.accesscontrol.functiongroup.api.integration.v1.model.FunctionGroupUpdate;
+import com.backbase.accesscontrol.functiongroup.api.service.v1.FunctionGroupApi;
+import com.backbase.accesscontrol.functiongroup.api.service.v1.model.FunctionGroupCreateRequest;
+import com.backbase.accesscontrol.functiongroup.api.service.v1.model.FunctionGroupItem;
+import com.backbase.accesscontrol.functiongroup.api.service.v1.model.GetFunctionGroups;
+import com.backbase.accesscontrol.functiongroup.api.service.v1.model.Permission;
+import com.backbase.accesscontrol.functiongroup.api.service.v1.model.ResultId;
+import com.backbase.accesscontrol.permissioncheck.api.service.v1.PermissionCheckApi;
+import com.backbase.accesscontrol.serviceagreement.api.service.v1.ServiceAgreementApi;
+import com.backbase.accesscontrol.usercontext.api.service.v1.UserContextApi;
 import com.backbase.dbs.user.api.service.v2.UserManagementApi;
 import com.backbase.stream.configuration.AccessControlConfigurationProperties;
 import com.backbase.stream.configuration.DeletionProperties;
@@ -32,11 +31,14 @@ import com.backbase.stream.legalentity.model.ServiceAgreement;
 import com.backbase.stream.utils.BatchResponseUtils;
 import com.backbase.stream.worker.exception.StreamTaskException;
 import com.backbase.stream.worker.model.StreamTask;
-import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -57,27 +59,37 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
 
     @Mock
     private UserManagementApi usersApi;
-
     @Mock
-    private UsersApi accessControlUsersApi;
-
+    private PermissionCheckApi permissionCheckServiceApi;
     @Mock
-    private DataGroupsApi dataGroupsApi;
-
+    private DataGroupApi dataGroupServiceApi;
     @Mock
-    private FunctionGroupsApi functionGroupsApi;
-
+    private com.backbase.accesscontrol.datagroup.api.integration.v1.DataGroupApi dataGroupIntegrationApi;
     @Mock
-    private ServiceAgreementsApi serviceAgreementsApi;
-
+    private FunctionGroupApi functionGroupServiceApi;
     @Mock
-    private DeletionProperties deletionProperties;
-
+    private com.backbase.accesscontrol.functiongroup.api.integration.v1.FunctionGroupApi functionGroupIntegrationApi;
     @Mock
-    private AccessControlConfigurationProperties accessControlConfigurationProperties;
-
+    private ServiceAgreementApi serviceAgreementServiceApi;
+    @Mock
+    private com.backbase.accesscontrol.serviceagreement.api.integration.v1.ServiceAgreementApi serviceAgreementIntegrationApi;
+    @Mock
+    private AssignPermissionsApi assignPermissionsServiceApi;
+    @Mock
+    private com.backbase.accesscontrol.assignpermissions.api.integration.v1.AssignPermissionsApi assignPermissionsIntegrationApi;
+    @Mock
+    private UserContextApi userContextApi;
+    @Spy
+    private DeletionProperties configurationProperties;
     @Spy
     private BatchResponseUtils batchResponseUtils;
+    @Mock
+    private AccessControlConfigurationProperties accessControlProperties;
+
+    private static final OffsetDateTime VALID_FROM = OffsetDateTime.of(LocalDateTime.now().minusYears(1L),
+        ZoneOffset.UTC);
+    private static final OffsetDateTime VALID_UNTIL = OffsetDateTime.of(LocalDateTime.now().plusMonths(10L),
+        ZoneOffset.UTC);
 
     @Test
     void shouldCreateNewJobRoleForSA() {
@@ -85,15 +97,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         final String saExternalId = "someSaExternalId";
         final String description = "someDescription";
         final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
 
         StreamTask streamTask = Mockito.mock(StreamTask.class);
 
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-            LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
 
         // participants
         serviceAgreement
@@ -106,16 +113,19 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
 
         serviceAgreement.setIsMaster(true);
 
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-            .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                .name("jobRoleOld").id("2")
-                .addPermissionsItem(new Permission().functionId("102")
-                    .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                    .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-            )));
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(Mono.just(new GetFunctionGroups()
+                .functionGroups(List.of(new FunctionGroupItem()
+                    .name("jobRoleOld").id("2")
+                    .addPermissionsItem(new Permission().businessFunctionName("name2")
+                        .privileges(Set.of("view", "edit"))
+                    )))));
 
         JobRole jobRole = new JobRole()
             .name("jobRoleNew")
+            .validFrom(VALID_FROM)
+            .validUntil(VALID_UNTIL)
+            .apsName("apsName")
             .addFunctionGroupsItem(new BusinessFunctionGroup()
                 .name("fg1")
                 .addFunctionsItem(new BusinessFunction()
@@ -131,31 +141,34 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("edit"))
                 ))
-            .metadata(Map.of("key1","value1"));
+            .metadata(Map.of("key1", "value1"));
 
-        Mockito.when(functionGroupsApi.postPresentationIngestFunctionGroup(any()))
-            .thenReturn(Mono.just(new IdItem().id("1")));
-        Mockito.when(accessControlConfigurationProperties.getConcurrency())
-                .thenReturn(1);
+        Mockito.when(functionGroupIntegrationApi.ingestFunctionGroup(any()))
+            .thenReturn(Mono.just(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.ResultId().id("1")));
+        Mockito.when(accessControlProperties.getConcurrency())
+            .thenReturn(1);
 
         Mono<List<JobRole>> listMono = subject.setupJobRoleForSa(streamTask, serviceAgreement, Stream.of(jobRole));
         List<JobRole> setupJobRole = listMono.block();
 
         Assertions.assertNotNull(setupJobRole);
 
-        Mockito.verify(functionGroupsApi)
-            .postPresentationIngestFunctionGroup(new PresentationIngestFunctionGroup()
+        Mockito.verify(functionGroupIntegrationApi)
+            .ingestFunctionGroup(new FunctionGroupIngest()
                 .externalServiceAgreementId(saExternalId)
+                .validFrom(VALID_FROM)
+                .validUntil(VALID_UNTIL)
                 .name("jobRoleNew")
                 .description("jobRoleNew")
-                .type(PresentationIngestFunctionGroup.TypeEnum.REGULAR)
-                .metadata(Map.of("key1","value1"))
-                .addPermissionsItem(new PresentationPermission()
-                    .functionId("101")
+                .type(FunctionGroupIngest.TypeEnum.CUSTOM)
+                .metadata(Map.of("key1", "value1"))
+                .apsName("apsName")
+                .addPermissionsItem(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                    .businessFunctionName("name1")
                     .addPrivilegesItem("view")
                 )
-                .addPermissionsItem(new PresentationPermission()
-                    .functionId("102")
+                .addPermissionsItem(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                    .businessFunctionName("name2")
                     .addPrivilegesItem("view")
                     .addPrivilegesItem("edit")
                 ));
@@ -167,15 +180,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         final String saExternalId = "someSaExternalId";
         final String description = "someDescription";
         final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
 
         StreamTask streamTask = Mockito.mock(StreamTask.class);
 
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-            LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
 
         // participants
         serviceAgreement
@@ -186,16 +194,19 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
             .addParticipantsItem(new LegalEntityParticipant().externalId("p3").sharingAccounts(false)
                 .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.ADD));
 
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-            .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                .name("jobRole").id("1")
-                .addPermissionsItem(new Permission().functionId("101")
-                    .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                    .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-            )));
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(
+                Mono.just(new GetFunctionGroups().functionGroups(Collections.singletonList(new FunctionGroupItem()
+                    .name("jobRole").id("1")
+                    .addPermissionsItem(new Permission().businessFunctionName("name1")
+                        .addPrivilegesItem("view")
+                        .addPrivilegesItem("edit")
+                    )))));
 
         JobRole jobRole = new JobRole()
             .name("jobRole")
+            .validFrom(VALID_FROM)
+            .validUntil(VALID_UNTIL)
             .addFunctionGroupsItem(new BusinessFunctionGroup()
                 .name("fg1")
                 .addFunctionsItem(new BusinessFunction()
@@ -211,33 +222,36 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("edit"))
                 ))
-            .metadata(Map.of("key1","value1"));
+            .metadata(Map.of("key1", "value1"));
 
-        Mockito.when(functionGroupsApi.putFunctionGroupsUpdate(any()))
+        Mockito.when(functionGroupIntegrationApi.batchUpdateFunctionGroups(any()))
             .thenReturn(Flux.fromIterable(Collections.emptyList()));
-        Mockito.when(accessControlConfigurationProperties.getConcurrency())
-                .thenReturn(1);
-
+        Mockito.when(accessControlProperties.getConcurrency())
+            .thenReturn(1);
 
         Mono<List<JobRole>> listMono = subject.setupJobRoleForSa(streamTask, serviceAgreement, Stream.of(jobRole));
         List<JobRole> setupJobRole = listMono.block();
 
         Assertions.assertNotNull(setupJobRole);
 
-        Mockito.verify(functionGroupsApi)
-            .putFunctionGroupsUpdate(Collections.singletonList(new PresentationFunctionGroupPutRequestBody()
-                .identifier(new PresentationIdentifier().idIdentifier("1"))
-                .functionGroup(new FunctionGroupUpdate()
+        Mockito.verify(functionGroupIntegrationApi)
+            .batchUpdateFunctionGroups(Collections.singletonList(new FunctionGroupBatchPutItem()
+                .identifier(new FunctionGroupNameIdentifier().name("jobRole").serviceAgreementExternalId(saExternalId))
+                .newValues(new FunctionGroupUpdate()
                     .name("jobRole")
+                    .validFrom(VALID_FROM)
+                    .validUntil(VALID_UNTIL)
                     .description("jobRole")
-                    .metadata(Map.of("key1","value1"))
-                    .addPermissionsItem(new PresentationPermissionFunctionGroupUpdate()
-                        .functionName("name1")
-                        .addPrivilegesItem("view"))
-                    .addPermissionsItem(new PresentationPermissionFunctionGroupUpdate()
-                        .functionName("name2")
-                        .addPrivilegesItem("view")
-                        .addPrivilegesItem("edit")))
+                    .metadata(Map.of("key1", "value1"))
+                    .addPermissionsItem(
+                        new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                            .businessFunctionName("name1")
+                            .addPrivilegesItem("view"))
+                    .addPermissionsItem(
+                        new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                            .businessFunctionName("name2")
+                            .addPrivilegesItem("view")
+                            .addPrivilegesItem("edit")))
             ));
     }
 
@@ -247,15 +261,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         final String saExternalId = "someSaExternalId";
         final String description = "someDescription";
         final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
 
         StreamTask streamTask = Mockito.mock(StreamTask.class);
 
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-            LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
 
         // participants
         serviceAgreement
@@ -268,16 +277,19 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
 
         serviceAgreement.setIsMaster(true);
 
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-            .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                .name("jobRoleOld").id("2")
-                .addPermissionsItem(new Permission().functionId("102")
-                    .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                    .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-            )));
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(
+                Mono.just(new GetFunctionGroups().functionGroups(Collections.singletonList(new FunctionGroupItem()
+                    .name("jobRoleOld").id("2")
+                    .addPermissionsItem(new Permission().businessFunctionName("name2")
+                        .addPrivilegesItem("view")
+                        .addPrivilegesItem("edit")
+                    )))));
 
         JobRole jobRole = new JobRole()
             .name("jobRoleNew")
+            .validFrom(VALID_FROM)
+            .validUntil(VALID_UNTIL)
             .addFunctionGroupsItem(new BusinessFunctionGroup()
                 .name("fg1")
                 .addFunctionsItem(new BusinessFunction()
@@ -293,33 +305,34 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("edit"))
                 ))
-            .metadata(Map.of("key1","value1"));
+            .metadata(Map.of("key1", "value1"));
 
-        Mockito.when(functionGroupsApi.postPresentationIngestFunctionGroup(any()))
-            .thenReturn(Mono.just(new IdItem().id("1")));
+        Mockito.when(functionGroupIntegrationApi.ingestFunctionGroup(any()))
+            .thenReturn(Mono.just(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.ResultId().id("1")));
 
         Mono<JobRole> listMono = subject.setupJobRole(streamTask, serviceAgreement, jobRole);
         JobRole setupJobRole = listMono.block();
 
         Assertions.assertNotNull(setupJobRole);
 
-        Mockito.verify(functionGroupsApi)
-            .postPresentationIngestFunctionGroup(new PresentationIngestFunctionGroup()
+        Mockito.verify(functionGroupIntegrationApi)
+            .ingestFunctionGroup(new FunctionGroupIngest()
                 .externalServiceAgreementId(saExternalId)
                 .name("jobRoleNew")
+                .validFrom(VALID_FROM)
+                .validUntil(VALID_UNTIL)
                 .description("jobRoleNew")
-                .type(PresentationIngestFunctionGroup.TypeEnum.REGULAR)
-                .metadata(Map.of("key1","value1"))
-                .addPermissionsItem(new PresentationPermission()
-                    .functionId("101")
+                .type(FunctionGroupIngest.TypeEnum.CUSTOM)
+                .metadata(Map.of("key1", "value1"))
+                .addPermissionsItem(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                    .businessFunctionName("name1")
                     .addPrivilegesItem("view")
                 )
-                .addPermissionsItem(new PresentationPermission()
-                    .functionId("102")
+                .addPermissionsItem(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                    .businessFunctionName("name2")
                     .addPrivilegesItem("view")
                     .addPrivilegesItem("edit")
                 ));
-
     }
 
     @Test
@@ -328,15 +341,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         final String saExternalId = "someSaExternalId";
         final String description = "someDescription";
         final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
 
         StreamTask streamTask = Mockito.mock(StreamTask.class);
 
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-            LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
 
         // participants
         serviceAgreement
@@ -349,16 +357,20 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
 
         serviceAgreement.setIsMaster(true);
 
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-            .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                .name("jobRoleOld").id("2")
-                .addPermissionsItem(new Permission().functionId("102")
-                    .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                    .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-            )));
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(
+                Mono.just(new GetFunctionGroups().functionGroups(Collections.singletonList(new FunctionGroupItem()
+                    .name("jobRoleOld").id("2")
+                    .addPermissionsItem(new Permission().businessFunctionName("name2")
+                        .addPrivilegesItem("view")
+                        .addPrivilegesItem("edit")
+                    )))));
 
         JobRole jobRole = new JobRole()
             .name("jobRoleNew")
+            .validFrom(VALID_FROM)
+            .validUntil(VALID_UNTIL)
+            .apsName("apsName")
             .addFunctionGroupsItem(new BusinessFunctionGroup()
                 .name("fg1")
                 .type(TypeEnum.TEMPLATE)
@@ -377,33 +389,35 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("edit"))
                 ))
-            .metadata(Map.of("key1","value1"));
+            .metadata(Map.of("key1", "value1"));
 
-        Mockito.when(functionGroupsApi.postPresentationIngestFunctionGroup(any()))
-            .thenReturn(Mono.just(new IdItem().id("1")));
+        Mockito.when(functionGroupIntegrationApi.ingestFunctionGroup(any()))
+            .thenReturn(Mono.just(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.ResultId().id("1")));
 
         Mono<JobRole> listMono = subject.setupJobRole(streamTask, serviceAgreement, jobRole);
         JobRole setupJobRole = listMono.block();
 
         Assertions.assertNotNull(setupJobRole);
 
-        Mockito.verify(functionGroupsApi)
-            .postPresentationIngestFunctionGroup(new PresentationIngestFunctionGroup()
+        Mockito.verify(functionGroupIntegrationApi)
+            .ingestFunctionGroup(new FunctionGroupIngest()
                 .externalServiceAgreementId(saExternalId)
                 .name("jobRoleNew")
+                .validFrom(VALID_FROM)
+                .validUntil(VALID_UNTIL)
                 .description("jobRoleNew")
-                .type(PresentationIngestFunctionGroup.TypeEnum.TEMPLATE)
-                .metadata(Map.of("key1","value1"))
-                .addPermissionsItem(new PresentationPermission()
-                    .functionId("101")
+                .type(FunctionGroupIngest.TypeEnum.REFERENCE)
+                .metadata(Map.of("key1", "value1"))
+                .apsName("apsName")
+                .addPermissionsItem(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                    .businessFunctionName("name1")
                     .addPrivilegesItem("view")
                 )
-                .addPermissionsItem(new PresentationPermission()
-                    .functionId("102")
+                .addPermissionsItem(new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                    .businessFunctionName("name2")
                     .addPrivilegesItem("view")
                     .addPrivilegesItem("edit")
                 ));
-
     }
 
     @Test
@@ -412,15 +426,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         final String saExternalId = "someSaExternalId";
         final String description = "someDescription";
         final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
 
         StreamTask streamTask = Mockito.mock(StreamTask.class);
 
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-            LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
 
         // participants
         serviceAgreement
@@ -433,13 +442,14 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
 
         serviceAgreement.setIsMaster(true);
 
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-            .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                .name("jobRoleOld").id("2")
-                .addPermissionsItem(new Permission().functionId("102")
-                    .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                    .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-            )));
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(
+                Mono.just(new GetFunctionGroups().functionGroups(Collections.singletonList(new FunctionGroupItem()
+                    .name("jobRoleOld").id("2")
+                    .addPermissionsItem(new Permission().businessFunctionName("name2")
+                        .addPrivilegesItem("view")
+                        .addPrivilegesItem("edit")
+                    )))));
 
         JobRole jobRole = new JobRole()
             .name("jobRoleNew")
@@ -461,7 +471,7 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("edit"))
                 ))
-            .metadata(Map.of("key1","value1"));
+            .metadata(Map.of("key1", "value1"));
 
         Mono<JobRole> listMono = subject.setupJobRole(streamTask, serviceAgreement, jobRole);
 
@@ -475,15 +485,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         final String saExternalId = "someSaExternalId";
         final String description = "someDescription";
         final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
 
         StreamTask streamTask = Mockito.mock(StreamTask.class);
 
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-            LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
 
         // participants
         serviceAgreement
@@ -496,17 +501,18 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
 
         serviceAgreement.setIsMaster(true);
 
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-            .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                .name("jobRoleOld").id("2")
-                .addPermissionsItem(new Permission().functionId("102")
-                    .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                    .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-            )));
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(
+                Mono.just(new GetFunctionGroups().functionGroups(Collections.singletonList(new FunctionGroupItem()
+                    .name("jobRoleOld").id("2")
+                    .addPermissionsItem(new Permission().businessFunctionName("name2")
+                        .addPrivilegesItem("view")
+                        .addPrivilegesItem("edit")
+                    )))));
 
         JobRole jobRole = new JobRole()
             .name("jobRoleNew")
-            .metadata(Map.of("key1","value1"));
+            .metadata(Map.of("key1", "value1"));
 
         Mono<JobRole> listMono = subject.setupJobRole(streamTask, serviceAgreement, jobRole);
 
@@ -520,15 +526,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         final String saExternalId = "someSaExternalId";
         final String description = "someDescription";
         final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
 
         StreamTask streamTask = Mockito.mock(StreamTask.class);
 
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-            LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
 
         // participants
         serviceAgreement
@@ -539,13 +540,14 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
             .addParticipantsItem(new LegalEntityParticipant().externalId("p3").sharingAccounts(false)
                 .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.ADD));
 
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-            .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                .name("jobRole").id("1")
-                .addPermissionsItem(new Permission().functionId("101")
-                    .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                    .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-            )));
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(
+                Mono.just(new GetFunctionGroups().functionGroups(Collections.singletonList(new FunctionGroupItem()
+                    .name("jobRole").id("1")
+                    .addPermissionsItem(new Permission().businessFunctionName("name1")
+                        .addPrivilegesItem("view")
+                        .addPrivilegesItem("edit")
+                    )))));
 
         JobRole jobRole = new JobRole()
             .name("jobRole")
@@ -564,9 +566,9 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
                     .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("edit"))
                 ))
-            .metadata(Map.of("key1","value1"));
+            .metadata(Map.of("key1", "value1"));
 
-        Mockito.when(functionGroupsApi.putFunctionGroupsUpdate(any()))
+        Mockito.when(functionGroupIntegrationApi.batchUpdateFunctionGroups(any()))
             .thenReturn(Flux.fromIterable(Collections.emptyList()));
 
         Mono<JobRole> listMono = subject.setupJobRole(streamTask, serviceAgreement, jobRole);
@@ -574,20 +576,22 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
 
         Assertions.assertNotNull(setupJobRole);
 
-        Mockito.verify(functionGroupsApi)
-            .putFunctionGroupsUpdate(Collections.singletonList(new PresentationFunctionGroupPutRequestBody()
-                .identifier(new PresentationIdentifier().idIdentifier("1"))
-                .functionGroup(new FunctionGroupUpdate()
+        Mockito.verify(functionGroupIntegrationApi)
+            .batchUpdateFunctionGroups(Collections.singletonList(new FunctionGroupBatchPutItem()
+                .identifier(new FunctionGroupNameIdentifier().name("jobRole").serviceAgreementExternalId(saExternalId))
+                .newValues(new FunctionGroupUpdate()
                     .name("jobRole")
                     .description("jobRole")
-                        .metadata(Map.of("key1","value1"))
-                    .addPermissionsItem(new PresentationPermissionFunctionGroupUpdate()
-                        .functionName("name1")
-                        .addPrivilegesItem("view"))
-                    .addPermissionsItem(new PresentationPermissionFunctionGroupUpdate()
-                        .functionName("name2")
-                        .addPrivilegesItem("view")
-                        .addPrivilegesItem("edit")))
+                    .metadata(Map.of("key1", "value1"))
+                    .addPermissionsItem(
+                        new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                            .businessFunctionName("name1")
+                            .addPrivilegesItem("view"))
+                    .addPermissionsItem(
+                        new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                            .businessFunctionName("name2")
+                            .addPrivilegesItem("view")
+                            .addPrivilegesItem("edit")))
             ));
     }
 
@@ -597,93 +601,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         final String saExternalId = "someSaExternalId";
         final String description = "someDescription";
         final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
 
         StreamTask streamTask = Mockito.mock(StreamTask.class);
 
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-                LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
-
-        // participants
-        serviceAgreement
-                .addParticipantsItem(new LegalEntityParticipant().externalId("p1").sharingAccounts(true)
-                        .sharingUsers(true).action(LegalEntityParticipant.ActionEnum.ADD))
-                .addParticipantsItem(new LegalEntityParticipant().externalId("p2").sharingAccounts(false)
-                        .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.REMOVE))
-                .addParticipantsItem(new LegalEntityParticipant().externalId("p3").sharingAccounts(false)
-                        .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.ADD));
-
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-                .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                        .name("jobRole").id("1")
-                        .addPermissionsItem(new Permission().functionId("101")
-                                .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                                .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-                )));
-
-        JobRole jobRole = new JobRole()
-                .name("jobRole")
-                .addFunctionGroupsItem(new BusinessFunctionGroup()
-                        .name("fg1")
-                        .addFunctionsItem(new BusinessFunction()
-                                .name("name1")
-                                .functionId("101")
-                                .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
-                        )
-                )
-                .addFunctionGroupsItem(new BusinessFunctionGroup().name("fg2")
-                        .addFunctionsItem(new BusinessFunction()
-                                .name("name2")
-                                .functionId("102")
-                                .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
-                                .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("edit"))
-                        ));
-
-        Mockito.when(functionGroupsApi.putFunctionGroupsUpdate(any()))
-                .thenReturn(Flux.just(new BatchResponseItemExtended()
-                        .resourceId("4028db307522bfbb017523171c9d0007")
-                        .status(BatchResponseItemExtended.StatusEnum.HTTP_STATUS_BAD_REQUEST)
-                        .addErrorsItem("You cannot manage this entity, while the referenced service agreement has a pending change.")
-                ));
-
-        Mono<JobRole> listMono = subject.setupJobRole(streamTask, serviceAgreement, jobRole);
-
-        Assertions.assertThrows(StreamTaskException.class, listMono::block);
-
-        Mockito.verify(functionGroupsApi)
-                .putFunctionGroupsUpdate(Collections.singletonList(new PresentationFunctionGroupPutRequestBody()
-                        .identifier(new PresentationIdentifier().idIdentifier("1"))
-                        .functionGroup(new FunctionGroupUpdate()
-                                .name("jobRole")
-                                .description("jobRole")
-                                .addPermissionsItem(new PresentationPermissionFunctionGroupUpdate()
-                                        .functionName("name1")
-                                        .addPrivilegesItem("view"))
-                                .addPermissionsItem(new PresentationPermissionFunctionGroupUpdate()
-                                        .functionName("name2")
-                                        .addPrivilegesItem("view")
-                                        .addPrivilegesItem("edit")))
-                ));
-    }
-
-    @Test
-    void setupFunctionGroups() {
-        final String saInternalId = "someSaInternalId";
-        final String saExternalId = "someSaExternalId";
-        final String description = "someDescription";
-        final String name = "someName";
-        final String validFromDate = "2021-03-08";
-        final String validFromTime = "00:00:00";
-        final String validUntilDate = "2022-03-08";
-        final String validUntilTime = "23:59:59";
-
-        StreamTask streamTask = Mockito.mock(StreamTask.class);
-
-        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name,
-            LocalDate.parse(validFromDate), validFromTime, LocalDate.parse(validUntilDate), validUntilTime);
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
 
         // participants
         serviceAgreement
@@ -694,15 +615,96 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
             .addParticipantsItem(new LegalEntityParticipant().externalId("p3").sharingAccounts(false)
                 .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.ADD));
 
-        Mockito.when(functionGroupsApi.getFunctionGroups(saInternalId))
-            .thenReturn(Flux.fromIterable(Collections.singletonList(new FunctionGroupItem()
-                .name("fg1").id("1")
-                .addPermissionsItem(new Permission().functionId("101")
-                    .addAssignedPrivilegesItem(new Privilege().privilege("view"))
-                    .addAssignedPrivilegesItem(new Privilege().privilege("edit")))
-            )));
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(
+                Mono.just(new GetFunctionGroups().functionGroups(Collections.singletonList(new FunctionGroupItem()
+                    .name("jobRole").id("1")
+                    .addPermissionsItem(new Permission().businessFunctionName("name1")
+                        .addPrivilegesItem("view")
+                        .addPrivilegesItem("edit")
+                    )))));
 
-        List<BusinessFunctionGroup> newFunctionGroup = Arrays.asList(new BusinessFunctionGroup()
+        JobRole jobRole = new JobRole()
+            .name("jobRole")
+            .addFunctionGroupsItem(new BusinessFunctionGroup()
+                .name("fg1")
+                .addFunctionsItem(new BusinessFunction()
+                    .name("name1")
+                    .functionId("101")
+                    .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
+                )
+            )
+            .addFunctionGroupsItem(new BusinessFunctionGroup().name("fg2")
+                .addFunctionsItem(new BusinessFunction()
+                    .name("name2")
+                    .functionId("102")
+                    .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("view"))
+                    .addPrivilegesItem(new com.backbase.stream.legalentity.model.Privilege().privilege("edit"))
+                ))
+            .putMetadataItem("key1", "value1");
+
+        Mockito.when(functionGroupIntegrationApi.batchUpdateFunctionGroups(any()))
+            .thenReturn(Flux.just(new BatchResponseItemExtended()
+                .resourceId("4028db307522bfbb017523171c9d0007")
+                .status(BatchResponseItemExtended.StatusEnum.HTTP_STATUS_BAD_REQUEST)
+                .addErrorsItem(
+                    "You cannot manage this entity, while the referenced service agreement has a pending change.")
+            ));
+
+        Mono<JobRole> listMono = subject.setupJobRole(streamTask, serviceAgreement, jobRole);
+
+        Assertions.assertThrows(StreamTaskException.class, listMono::block);
+
+        Mockito.verify(functionGroupIntegrationApi)
+            .batchUpdateFunctionGroups(Collections.singletonList(new FunctionGroupBatchPutItem()
+                .identifier(new FunctionGroupNameIdentifier().name("jobRole").serviceAgreementExternalId(saExternalId))
+                .newValues(new FunctionGroupUpdate()
+                    .name("jobRole")
+                    .description("jobRole")
+                    .metadata(Map.of("key1", "value1"))
+                    .addPermissionsItem(
+                        new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                            .businessFunctionName("name1")
+                            .addPrivilegesItem("view"))
+                    .addPermissionsItem(
+                        new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                            .businessFunctionName("name2")
+                            .addPrivilegesItem("view")
+                            .addPrivilegesItem("edit")))
+            ));
+
+    }
+
+    @Test
+    void setupFunctionGroups() {
+        final String saInternalId = "someSaInternalId";
+        final String saExternalId = "someSaExternalId";
+        final String description = "someDescription";
+        final String name = "someName";
+
+        StreamTask streamTask = Mockito.mock(StreamTask.class);
+
+        ServiceAgreement serviceAgreement = buildInputServiceAgreement(saInternalId, saExternalId, description, name);
+
+        // participants
+        serviceAgreement
+            .addParticipantsItem(new LegalEntityParticipant().externalId("p1").sharingAccounts(true)
+                .sharingUsers(true).action(LegalEntityParticipant.ActionEnum.ADD))
+            .addParticipantsItem(new LegalEntityParticipant().externalId("p2").sharingAccounts(false)
+                .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.REMOVE))
+            .addParticipantsItem(new LegalEntityParticipant().externalId("p3").sharingAccounts(false)
+                .sharingUsers(false).action(LegalEntityParticipant.ActionEnum.ADD));
+
+        Mockito.when(functionGroupServiceApi.getFunctionGroups(saInternalId))
+            .thenReturn(
+                Mono.just(new GetFunctionGroups().functionGroups(Collections.singletonList(new FunctionGroupItem()
+                    .name("fg1").id("1")
+                    .addPermissionsItem(new Permission().businessFunctionName("name1")
+                        .addPrivilegesItem("view")
+                        .addPrivilegesItem("edit")
+                    )))));
+
+        List<BusinessFunctionGroup> newFunctionGroup = List.of(new BusinessFunctionGroup()
                 .name("fg1")
                 .id("1")
                 .addFunctionsItem(new BusinessFunction()
@@ -719,10 +721,10 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
                 )
         );
 
-        Mockito.when(functionGroupsApi.putFunctionGroupsUpdate(any()))
+        Mockito.when(functionGroupIntegrationApi.batchUpdateFunctionGroups(any()))
             .thenReturn(Flux.fromIterable(Collections.emptyList()));
-        Mockito.when(functionGroupsApi.postPresentationIngestFunctionGroup(any()))
-            .thenReturn(Mono.just(new IdItem().id("2")));
+        Mockito.when(functionGroupServiceApi.createFunctionGroup(any()))
+            .thenReturn(Mono.just(new ResultId().id("2")));
 
         Mono<List<BusinessFunctionGroup>> listMono =
             subject.setupFunctionGroups(streamTask, serviceAgreement, newFunctionGroup);
@@ -731,32 +733,32 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
         Assertions.assertNotNull(businessFunctionGroups);
         Assertions.assertEquals(2, businessFunctionGroups.size());
 
-        Mockito.verify(functionGroupsApi)
-            .putFunctionGroupsUpdate(Collections.singletonList(new PresentationFunctionGroupPutRequestBody()
-                .identifier(new PresentationIdentifier().idIdentifier("1"))
-                .functionGroup(new FunctionGroupUpdate()
+        Mockito.verify(functionGroupIntegrationApi)
+            .batchUpdateFunctionGroups(Collections.singletonList(new FunctionGroupBatchPutItem()
+                .identifier(new FunctionGroupNameIdentifier().name("fg1").serviceAgreementExternalId(saExternalId))
+                .newValues(new FunctionGroupUpdate()
                     .name("fg1")
                     .description("fg1")
-                    .addPermissionsItem(new PresentationPermissionFunctionGroupUpdate()
-                        .functionName("name1")
-                        .addPrivilegesItem("view")))
+                    .addPermissionsItem(
+                        new com.backbase.accesscontrol.functiongroup.api.integration.v1.model.Permission()
+                            .businessFunctionName("name1")
+                            .addPrivilegesItem("view")))
             ));
-
-        Mockito.verify(functionGroupsApi)
-            .postPresentationIngestFunctionGroup(new PresentationIngestFunctionGroup()
-                .externalServiceAgreementId(saExternalId)
+        Mockito.verify(functionGroupServiceApi)
+            .createFunctionGroup(new FunctionGroupCreateRequest()
+                .serviceAgreementId(saInternalId)
                 .name("fg2")
                 .description("fg2")
-                .type(PresentationIngestFunctionGroup.TypeEnum.REGULAR)
-                .addPermissionsItem(new PresentationPermission()
-                    .functionId("102")
+                .type(FunctionGroupCreateRequest.TypeEnum.CUSTOM)
+                .addPermissionsItem(new Permission()
+                    .businessFunctionName("name2")
                     .addPrivilegesItem("view")
                     .addPrivilegesItem("edit")
                 ));
     }
 
     private ServiceAgreement buildInputServiceAgreement(String saInternalId, String saExternalId, String description,
-        String name, LocalDate validFromDate, String validFromTime, LocalDate validUntilDate, String validUntilTime) {
+        String name) {
 
         return new ServiceAgreement()
             .internalId(saInternalId)
@@ -764,10 +766,20 @@ class AccessGroupServiceUpdateFunctionGroupsTest {
             .description(description)
             .status(ENABLED)
             .name(name)
-            .validFromDate(validFromDate)
-            .validFromTime(validFromTime)
-            .validUntilDate(validUntilDate)
-            .validUntilTime(validUntilTime);
+            .validFrom(VALID_FROM)
+            .validUntil(VALID_UNTIL);
     }
 
+    @Test
+    void testPartitionList() {
+        List<Integer> input = List.of(1, 2, 3, 4, 5, 6, 7);
+        int partitionSize = 3;
+
+        List<List<Integer>> result = AccessGroupService.partitionList(input, partitionSize);
+
+        Assertions.assertEquals(3, result.size());
+        Assertions.assertEquals(List.of(1, 2, 3), result.get(0));
+        Assertions.assertEquals(List.of(4, 5, 6), result.get(1));
+        Assertions.assertEquals(List.of(7), result.get(2));
+    }
 }
